# live-subprocess

./: CLAUDE.md  Dockerfile  README.md  compose.yml  project-words.txt  pyproject.toml
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  deploy.yml  qlty.yml  test.yml
docs/: CONTRIBUTING.md
livesubprocess/: __init__.py  factory.py  popen.py  pty.py
livesubprocess/pipe/: realtime_pipe_reader.py
livesubprocess/posix/: __init__.py  popen.py  pty.py
livesubprocess/windows/: __init__.py  popen.py
tests/: __init__.py  conftest.py  test_livesubprocess.py
tests/pipe/: test_pipe_manager.py  test_realtime_pipe_reader.py
tests/posix/: __init__.py  test_popen.py
tests/testlibraries/: instance_resource.py  print_forever.py
